# iot-sdk

./: .gitignore  Readme.md  west.yml
.github/workflows/: tag.yaml
SDK/Arduino/: Readme.md  library.properties
SDK/Arduino/examples/blinky/: blinky.h
SDK/Arduino/examples/blinky32/: blinky.sol
SDK/Arduino/src/: Kenshi.h
SDK/Arduino/src/Kenshi/: Kenshi.cpp
SDK/ESP32/examples/blinky/: blinky.ino
SDK/ESP32/src/Kenshi/: Kenshi.cpp  Kenshi.h
arduino/: Readme.md  keywords.txt
arduino/examples/blinky/: blinky.ino
arduino/examples/blinky32/: blinky.ino
arduino/src/: Kenshi.cpp  Kenshi.h
zephyr/: module.yml
zephyr/src/: .gitignore  CMakeLists.txt  Kconfig
zephyr/src/app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
zephyr/src/app/src/: config.h  main.c
zephyr/src/include/kenshi/: kenshi.h
zephyr/src/lib/: CMakeLists.txt  Kconfig
zephyr/src/lib/kenshi/: CMakeLists.txt  Kconfig  cJSON.c  kenshi.c
